--- a/android/res/values-in/strings.xml
+++ b/android/res/values-in/strings.xml
@@ -796,6 +796,7 @@
 	<string name="download_over_mobile_message">Ini bisa menjadi jauh mahal pada beberapa paket atau jika roaming.</string>
 	<string name="error_enter_correct_house_number">Masukkan nomor rumah yang benar</string>
 	<string name="editor_storey_number">Jumlah lantai (maksimum %d)</string>
+	<!-- Error message in Editor when a user tries to set the number of floors for a building higher than 25 -->
 	<string name="error_enter_correct_storey_number">Edit bangunan dengan maksimum 25 lantai</string>
 	<string name="editor_zip_code">Kode Pos</string>
 	<string name="error_enter_correct_zip_code">Masukkan Kode Pos yang benar</string>
