--- a/android/res/values-nl/strings.xml
+++ b/android/res/values-nl/strings.xml
@@ -797,6 +797,7 @@
 	<string name="download_over_mobile_message">Met sommige abonnementen of bij roaming kan dit behoorlijk duur zijn.</string>
 	<string name="error_enter_correct_house_number">Een juist huisnummer invoeren</string>
 	<string name="editor_storey_number">Aantal verdiepingen (max. %d)</string>
+	<!-- Error message in Editor when a user tries to set the number of floors for a building higher than 25 -->
 	<string name="error_enter_correct_storey_number">Bewerk het gebouw met maximaal 25 verdiepingen</string>
 	<string name="editor_zip_code">Postcode</string>
 	<string name="error_enter_correct_zip_code">Voer de juiste postcode in</string>
