--- a/android/res/values-pt/strings.xml
+++ b/android/res/values-pt/strings.xml
@@ -796,6 +796,7 @@
 	<string name="download_over_mobile_message">Isto pode ser significativamente caro, com alguns planos ou se roaming.</string>
 	<string name="error_enter_correct_house_number">Introduzir um número de casa correto</string>
 	<string name="editor_storey_number">Número de pisos (máx. %d)</string>
+	<!-- Error message in Editor when a user tries to set the number of floors for a building higher than 25 -->
 	<string name="error_enter_correct_storey_number">Editar o edifício com um máximo de 25 pisos</string>
 	<string name="editor_zip_code">Código Postal</string>
 	<string name="error_enter_correct_zip_code">Introduza o código postal correto</string>
