--- a/android/res/values-sv/strings.xml
+++ b/android/res/values-sv/strings.xml
@@ -801,6 +801,7 @@
 	<string name="download_over_mobile_message">Detta kan vara mycket dyrt med vissa abonnemang och vid roaming.</string>
 	<string name="error_enter_correct_house_number">Ange korrekt husnummer</string>
 	<string name="editor_storey_number">Antal våningar (max %d)</string>
+	<!-- Error message in Editor when a user tries to set the number of floors for a building higher than 25 -->
 	<string name="error_enter_correct_storey_number">Redigera byggnaden med max 25 våningar</string>
 	<string name="editor_zip_code">Postnr</string>
 	<string name="error_enter_correct_zip_code">Ange korrekt postnr</string>
