--- a/android/res/values-tr/strings.xml
+++ b/android/res/values-tr/strings.xml
@@ -803,6 +803,7 @@
 	<string name="download_over_mobile_message">Bu işlem bazı planlarla ya da dolaşım ise büyük ölçüde pahalı olabilir.</string>
 	<string name="error_enter_correct_house_number">Doğru ev numarası girin</string>
 	<string name="editor_storey_number">Kat sayısı (en fazla %d)</string>
+	<!-- Error message in Editor when a user tries to set the number of floors for a building higher than 25 -->
 	<string name="error_enter_correct_storey_number">Binayı en fazla 25 katlı düzenle</string>
 	<string name="editor_zip_code">Posta Kodu</string>
 	<string name="error_enter_correct_zip_code">Doğru Posta Kodunu girin</string>
