--- a/android/res/values-ru/strings.xml
+++ b/android/res/values-ru/strings.xml
@@ -988,8 +988,8 @@
 	<string name="booking_filters_price_category">Ценовая категория</string>
 	<string name="booking_filters_no_results">Поиск не дал результатов</string>
 	<string name="booking_filters_nores_message">Попробуйте задать более общий запрос, уменьшить масштаб карты или сбросить фильтр.</string>
-	<string name="booking_filters_expand_area">Уменьшить масштаб карты</string>
-	<string name="booking_filters_reset">Сбросить фильтр</string>
+	<string name="booking_filters_expand_area_button">Уменьшить масштаб карты</string>
+	<string name="booking_filters_reset_button">Сбросить фильтр</string>
 	<string name="booking_list">Список</string>
 	<string name="booking_based_on_reviews">По %d отзывам об отеле</string>
 	<string name="booking_show_more">Показать еще</string>
