--- a/iphone/Maps/ru.lproj/Localizable.strings
+++ b/iphone/Maps/ru.lproj/Localizable.strings
@@ -1668,9 +1668,9 @@
 
 "booking_filters_nores_message" = "Попробуйте задать более общий запрос, уменьшить масштаб карты или сбросить фильтр.";
 
-"booking_filters_expand_area" = "Уменьшить масштаб карты";
+"booking_filters_expand_area_button" = "Уменьшить масштаб карты";
 
-"booking_filters_reset" = "Сбросить фильтр";
+"booking_filters_reset_button" = "Сбросить фильтр";
 
 "booking_list" = "Список";
 
