--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -977,7 +977,7 @@
 	<!-- For ordering a taxi (as opposed to hotels or other things) -->
 	<string name="taxi_order">Order</string>
 	<!-- How long it is until the taxi arrives -->
-	<string name="taxi_wait">Expected in %d min</string>
+	<string name="taxi_wait">Expected in %s</string>
 	<!-- When there are no available taxis nearby -->
 	<string name="taxi_not_found">Couldn\&#39;t find a taxi nearby</string>
 	<string name="install_app">Install</string>
