--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -1002,4 +1002,7 @@
 	<string name="booking_hotel_room">Room</string>
 	<string name="chat">Geochat</string>
 	<string name="chat_open">Open</string>
+	<!-- TODO: it's temporary -->
+	<string name="uber_no_internet">Internet connection is required to order taxi</string>
+	<string name="uber_remote_error">Uber is unavailable</string>
 </resources>
