--- a/iphone/Maps/ru.lproj/Localizable.strings
+++ b/iphone/Maps/ru.lproj/Localizable.strings
@@ -1699,3 +1699,5 @@
 "dialog_taxi_offline" = "Заказ такси недоступен офлайн.";
 
 "dialog_taxi_error" = "Заказ такси временно недоступен.";
+
+"advertisement" = "Реклама";
