--- a/iphone/Maps/uk.lproj/Localizable.strings
+++ b/iphone/Maps/uk.lproj/Localizable.strings
@@ -1699,3 +1699,5 @@
 "dialog_taxi_offline" = "Замовлення таксі неможливе в автономному режимі.";
 
 "dialog_taxi_error" = "Замовлення таксі тимчасово недоступне.";
+
+"advertisement" = "Advertisement";
